--- a/resmio/views/crm_lead.xml
+++ b/resmio/views/crm_lead.xml
@@ -14,6 +14,7 @@
                 <field name="cmp_content" attrs="{'readonly': 1}"/>
                 <field name="cmp_campaign" attrs="{'readonly': 1}"/>
                 <field name="gclid" attrs="{'readonly': 1}"/>
+                <field name="facebookpage"/>
             </xpath>
         </field>
     </record>
