added customer search by facility id
Signed-off-by: Sascha Pfeiffer <sascha.pfeiffer@resmio.com>

--- a/resmio/views/res_partner.xml
+++ b/resmio/views/res_partner.xml
@@ -36,4 +36,15 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_res_partner_filter_resmio_inherit" model="ir.ui.view">
+        <field name="name">res.partner.select.resmio.inherit</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_res_partner_filter"/>
+        <field name="arch" type="xml">
+            <field name="user_id" position="after">
+                <field name="facility_id"/>
+            </field>
+        </field>
+    </record>
 </odoo>
